NMPRK/nmprkC/nmprkC.h

/*!
	Send the Get SEL Info command (NetFn: 0Ah Cmd: 40h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\param[out] info The SEL info from the command response
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_GetSelInfo(
	IN nmprk_conn_handle_t h,
	OUT nm_ipmi_repo_info_t *info);
/*!
	Send the Get SEL Entry command (NetFn: 0Ah Cmd: 43h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\param[in] entryId The Entry ID
	\param[out] entry The output parameters from the command response
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_GetSelEntry(
	IN nmprk_conn_handle_t h,
	IN ushort_t entryId,
	OUT ushort_t *nextRecord,
	OUT nm_ipmi_sel_entry_t *entry);
/*!
	Send the Delete SEL Entry command (NetFn: 0Ah Cmd: 46h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\param[in] entryId The entry to delete
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_DeleteSelEntry(
	IN nmprk_conn_handle_t h,
	IN ushort_t entryId);
/*!
	Send the Clear SEL command (NetFn: 0Ah Cmd: 47h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_ClearSel(
	IN nmprk_conn_handle_t h);
/*!
	Send the Get FRU Inventory Area Info command (NetFn: 0Ah Cmd: 10h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\param[out] info The FRU info from the command response
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_GetFruInfo(
	IN nmprk_conn_handle_t h,
	OUT nm_ipmi_fru_info_t *info);
/*!
	Send the Read FRU Data command (NetFn: 0Ah Cmd: 11h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\param[in] offset The offset into the inventory
	\param[in,out] length The number of bytes to read on input, the number
						  of bytes returned on output.
	\param[out] data The data buffer to store the results, must be greater
	                 than or equal to length
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_ReadFruData(
	IN nmprk_conn_handle_t h,
	IN int_t offset,
	IN OUT int_t *length,
	OUT byte_t *data);
/*!
	Send the Write FRU Data command (NetFn: 0Ah Cmd: 12h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\param[in] offset The offset into the inventory
	\param[in,out] length The number of bytes to write on input, the number
						  of bytes actually written on output.
	\param[in] data The data buffer that contains the buffer to write
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_WriteFruData(
	IN nmprk_conn_handle_t h,
	IN int_t offset,
	IN OUT int_t *length,
	IN byte_t *data);
/*!
	Send the Set ACPI Power State command (NetFn: 06h Cmd: 06h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\param[out] input The power state info to set
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_SetAcpiPowerState(
	IN nmprk_conn_handle_t h,
	IN ipmi_acpi_power_state_t *input);
/*!
	Send the Get ACPI Power State command (NetFn: 06h Cmd: 07h) and
	receive the response. 
	
	See the <a href="https://www-ssl.intel.com/content/www/us/en/servers/ipmi/second-gen-interface-spec-v2.html">IPMI Specification</a> for more details.

	\param[in] h The connection handle
	\param[out] output The power state info returned
	\return ::nmprk_status_t NMPRK_SUCCESS if the function is successful.
							 If a non-zero completion code is received that
							 completion code is the return value
*/
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_GetAcpiPowerState(
	IN nmprk_conn_handle_t h,
	OUT ipmi_acpi_power_state_t *output);