NMPRK/NMPRK.cs


        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_GetSelInfo", SetLastError = true)]
        public static extern int IPMI_GetSelInfo(
            [In] int h,
            [In, Out] ref nm_ipmi_repo_info_t info);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_GetSelEntry", SetLastError = true)]
        public static extern int IPMI_GetSelEntry(
            [In] int h,
            [In] ushort entryId,
            [In, Out] ref ushort nextEntry,
            [In, Out] ref nm_ipmi_sel_entry_t entry);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_DeleteSelEntry", SetLastError = true)]
        public static extern int IPMI_DeleteSelEntry(
            [In] int h,
            [In] ushort entryId);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_ClearSel", SetLastError = true)]
        public static extern int IPMI_ClearSel(
            [In] int h);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_GetFruInfo", SetLastError = true)]
        public static extern int IPMI_GetFruInfo(
            [In] int h,
            [In, Out] ref nm_ipmi_fru_info_t info);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_ReadFruData", SetLastError = true)]
        public static extern int IPMI_ReadFruData(
            [In] int h,
            [In] int offset,
            [In, Out] ref int length,
            [In, Out, MarshalAs(UnmanagedType.LPArray)] byte[] data);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_WriteFruData", SetLastError = true)]
        public static extern int IPMI_WriteFruData(
            [In] int h,
            [In] int offset,
            [In, Out] ref int length,
            [In, MarshalAs(UnmanagedType.LPArray)] byte[] data);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_GetAcpiPowerState", SetLastError = true)]
        public static extern int IPMI_GetAcpiPowerState(
            [In] int h,
            [In, Out] ref ipmi_acpi_power_state_t state);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_SetAcpiPowerState", SetLastError = true)]
        public static extern int IPMI_SetAcpiPowerState(
            [In] int h,
            [In] ref ipmi_acpi_power_state_t state);
    }
}
